# vio_common

./: .gitignore  .linterconfig.yaml  CMakeLists.txt  README.md  kalibr_bagcreater.py  visualizematrix.py
app/: maplab2tumtraj.cpp  video2images_kalibr.cpp
include/vio/: CsvReader.h  DataGrabber.h  FrameGrabber.h  GpsGrabber.h  IMUErrorModel.h  ImuGrabber.h  PointStatistics.h  TinyTimer.h  VimapContainer.h  derivedLinePatterns.h  eigen_utils.h  maths_utils.h  removeFromVector.hpp  sort.h  timegrabber.h  utils.h
include/vio/implementation/: IMUErrorModel.h
launch/: bag_to_images.launch  throttle.launch
matlab/: T_from_Pq.m  align_cloud_to_tls.m  align_clouds.m  approximateAtan2.m  check_floor_surfels.m  compare_range_hist.m  convertcolor.m  cropImageSeries.m  extract_points_in_cuboid.m  las2ply.m  load_tform.m  plot_trajs2.m  register_basement_tls_scans.m  save_tform.m  swap_files.m  transform_pc.m
matlab/hiltislam2022/: compute_hiltislam2022_chamfer_distance.py  precompute_transforms.m  step1_downsample.sh
matlab/plane_fit/: basement_pc_analysis.m  check_plane.m  check_tls_transform.m  choose_plane_seeds.m  compute_bbox_areas.m  corridor_room_align_to_tls.m  corridor_room_pc_analysis.m  crop_pc_by_polygon.m  evaluate_c2c.m  evaluate_plane.m  find_points_in_box.m  load_bboxes.m  mask_pc_by_cube.m  mask_pc_by_range.m  plane_bbox.m  plot_c2c.m  plot_colored_room_and_corridor.m  plot_fitted_plane.m  plot_plane_heatmaps.m  plot_quality_check_projections.m  plot_room_pc_in_graphic_abstract.m  plot_wall_and_floor_patches.m  readme.md  save_bboxes.m  segment_plane_by_circle_cover.m  segment_plane_by_region_grow.m  show_boxes_on_pc.m
python/: ChecksumGeneratorV2.py  bag_to_imu.py  bag_to_pose.py  bagmerge.py  check_bags.py  checkpointcloud2.py  convert_pose_format.py  correct_stereo_thermal_times.py  create_rosbag_for_bluefox_mlc.py  create_rosbag_for_images_in_dir.py  create_rosbag_for_video.py  csv_poses_to_ros_path.py  custom_bagcreater.py  download2020visuallocalization.py  download_files_from_web.py  download_hiltislam2021.py  download_hiltislam2022.py  downsample_images_in_rosbag.py  draw_images_in_rosbag_with_corners.py  export_mscrad4r_gt.py  extract_img_from_rosbag.py  extract_pcd_from_rosbag.py  figureInfinity.py  get_tumvi_camera_time_offset.py  kalibr_bagcreater.py  kalibr_bagcreator.py  livox_phone_bagcreater.py  marker_demo.py  pdf_cat.py  play_images_in_rosbag.py  rename_files.py  rgbd_bag_to_synced_images.py  rosbag2images.py  rosbag2video.py  split_pdf.py  split_rosbag.py  stereo_thermal_td.py  stim300_to_imu_message.py  tf_helpers.py  transform_trajectory.py  (+2 more)
python/download/: download_4seasons.py  download_files_from_web.py  download_hiltislam2021.py  download_naverlab_indoors.py  downsample_images_in_rosbag.py
python/lidar/: aggregate_scans_in_folder.py  aggregate_scans_in_rosbag.py  checkpointcloud2.py  color_lidar_points.py  correct_hesai_pandarxt_times.py  csv_imu_to_ros2bag.py  cull_stationary_end.py  extract_pcd_from_rosbag.py  livox_phone_bagcreater.py  livox_phone_bagcreator.py  mid360_s22plus_config.yaml  play_pointclouds_in_rosbag.py  scan_states_in_folder.py  scan_stats_in_rosbag.py  split_velodyne_pointclouds.py  zip_folder.py  zup_lio_traj.py
python/plotters/: draw_images_in_rosbag_with_corners.py  overlay_pcl_on_image.py  play_images_in_rosbag.py  play_video.py  plot_tum.py  rviz_camera_frustum.py  visualize_matrix.py
python/rolling_shutter_skew/: test_rolling_shutter_skew.py
python/test/: extract_time.py  test_bagcreator.py  test_euler.py  test_pose_format_converter.py  test_slerp.py  test_utility_functions.py
python/test/data/: frame_timestamps.txt  maplab_vertices.csv  movie_metadata.csv  sample_trajectory.csv
rolling_shutter_skew/: README.md  VideoManager.py  calibrateCamera.py  computeLedPanelHomography.py  estimate-rs-skew-from-video.sh  findCircles.py  homography.py  interpret_line_delay.py  ioUtilities.py  kNearestNeighbor.py  largestComponent.py  point_to_parabola.py  test_rolling_shutter_skew.py
rolling_shutter_skew/matlab/: Imfindcircles.m  computeRsSkewOnImages.m  getCircles.m  getCurrentFrame.m  getNextFrame.m  getPreviousFrame.m  image3dplot.m  imfindcircles.m  interactivelyComputeRsSkew.m  interactivelyComputeRsSkewWrap.m  saveCurrentAndGetNext.m  showFrame.m  slopeFunc.m  testImageContour.m
rolling_shutter_skew/test/: testHomography.py  testLargestComponent.py  testNearestNeighbors.py  testPointToParabola.py  testRollingShutterSkew.py
shell/: check_md5sum.sh  check_sha256sum.sh
src/: CsvReader.cpp  FrameGrabber.cpp  GPSGrabber.cpp  GpsGrabber.cpp  ImuGrabber.cpp  Sample.cpp  TimeGrabber.cpp  VimapContainer.cpp  derivedLinePatterns.cpp  eigen_utils.cpp  maths_utils.cpp  timegrabber.cpp  utils.cpp
test/: gyro_accel.csv  kannala_brandt_camera4.hpp  testImuGrabber.cpp  test_config.h.in  test_csv_reader.cpp  test_eigen_utils.cpp  test_frame_grabber.cpp  test_gps_grabber.cpp  test_imu_grabber.cpp  test_main.cpp  test_time_grabber.cpp  test_utils.cpp  test_vimap_container.cpp  testcsvreader.cpp  testframegrabber.cpp  testtimegrabber.cpp  testutils.cpp
test/data/: mars_frame_timestamps.txt
test/data/honorv10/: edge_epochs.txt  frame_timestamps.txt  gyro_accel.csv  movie_metadata.csv
timestamp_corrector/: CMakeLists.txt  README.md  test.py
timestamp_corrector/include/: TimestampCorrector.hpp
timestamp_corrector/include/implementation/: TimestampCorrector.hpp
timestamp_corrector/src/: exportTimestampCorrector.cpp
